--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
           <table><tbody>
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/mit.png" width="1%" height="auto"/>
+                <img src="imgs/mit.png" />
               </td>
 
               <td class="exp-description">
@@ -119,10 +119,10 @@
                 Advisor: <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a>
               </td>
             </tr>
-            
+            <br><br>
             <tr>
               <td class="exp-avatar">
-                <img src="imgs/HCIS.png"  width="1%" height="auto"/>
+                <img src="imgs/HCIS.png"  />
               </td>
 
               <td class="exp-description">
@@ -134,9 +134,10 @@
                 Advisor: <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>
               </td>
             </tr>
+            <br><br>
             <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/CITI.jpeg" width="1%" height="auto" />
+                  <img src="imgs/CITI.jpeg"  />
                 </td>
 
                 <td class="exp-description">
@@ -148,9 +149,10 @@
                   Advisor: <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a>
                 </td>
               </tr>
+              <br><br>
               <tr>
                 <td class="exp-avatar">
-                  <img src="imgs/NII.jpeg" width="1%" height="auto" />
+                  <img src="imgs/NII.jpeg"  />
                 </td>
 
                 <td class="exp-description">
