--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </tbody></table>
         <br>
         <div style="height: 400px; overflow: auto;" id="pub-div">
-          <b>Harnessing Heuristic and its Robustness for DRL - </b> 
+          <b style="margin-left: 50px">Harnessing Heuristic and its Robustness for DRL - </b> 
           In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
           primarily due to the limitation of finite sample sizes for each training batch. 
           <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
