--- a/index.html
+++ b/index.html
@@ -179,13 +179,15 @@
         </tbody></table>
         <br>
         <div style="height: 400px; overflow: auto;" id="pub-div">
-          <b style="margin-left: 50px">Harnessing Heuristic and its Robustness for DRL - </b> 
-          In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
-          primarily due to the limitation of finite sample sizes for each training batch. 
-          <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
-          such as potential-based reward shaping.  -->
-          My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
-          enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort.
+          <div style="margin-left: 20px">
+            <b>Harnessing Heuristic and its Robustness for DRL - </b> 
+            In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
+            primarily due to the limitation of finite sample sizes for each training batch. 
+            <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
+            such as potential-based reward shaping.  -->
+            My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
+            enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort.
+          </div>
           <br><br>
           <table><tbody>
             <tr>
