--- a/index.html
+++ b/index.html
@@ -188,7 +188,7 @@
             My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
             enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort.
           </div>
-          <br><br>
+          <!-- <br><br> -->
           <table><tbody>
             <tr>
               <td class="pub-avatar">
@@ -225,7 +225,7 @@
             </tr>
           </tbody></table>
           <br><br>
-          <b>Connecting Entanglement in Perceivability and Decision-Making - </b> 
+          <div style="margin-left: 20px"><b>Connecting Entanglement in Perceivability and Decision-Making - </b> 
           An agent cannot effectively make decisions without perceiving the necessary patterns. 
           While trajectories for policy training are collected by experts using privileged information, 
           but only sensor features (partial observations) are available during deployment, 
@@ -233,7 +233,8 @@
           <!-- Even if a perception model might converge to a local minimum with similar total loss levels, 
           different error situations can indicate varying degrees of perceivability, significantly impacting decision-making.  -->
           My earlier work focused on optimizing perception model training to ensure it aligns with both perception and downstream objectives. 
-          <br><br>
+          </div>
+          <!-- <br><br> -->
           <table><tbody>
             <tr>
               <td class="pub-avatar">
