--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
         </tbody></table>
         <br>
         <div style="height: 400px; overflow: auto;" id="pub-div">
-          <div style="margin-left: 20px">
+          <div style="margin-left: 20px;margin-right: 20px">
             <b>Harnessing Heuristic and its Robustness for DRL - </b> 
             In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
             primarily due to the limitation of finite sample sizes for each training batch. 
@@ -225,7 +225,7 @@
             </tr>
           </tbody></table>
           <br><br>
-          <div style="margin-left: 20px"><b>Connecting Entanglement in Perceivability and Decision-Making - </b> 
+          <div style="margin-left: 20px; margin-right: 20px"><b>Connecting Entanglement in Perceivability and Decision-Making - </b> 
           An agent cannot effectively make decisions without perceiving the necessary patterns. 
           While trajectories for policy training are collected by experts using privileged information, 
           but only sensor features (partial observations) are available during deployment, 
