--- a/index.html
+++ b/index.html
@@ -252,8 +252,10 @@
               </td>
             </tr>
           </tbody></table>
+          <div style="margin-left: 20px; margin-right: 20px">
           In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
           </div>
+        </div>
         <br><br>
         <!--publications-->
         <table><tbody>
