--- a/index.html
+++ b/index.html
@@ -181,12 +181,12 @@
         <div style="height: 400px; overflow: auto;" id="pub-div">
           <div style="margin-left: 20px;margin-right: 20px">
             <b>Harnessing Heuristic and its Robustness for DRL - </b> 
-            In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
-            primarily due to the limitation of finite sample sizes for each training batch. 
+            In practice, DRL training frequently relies on tedious heuristic reward designs to promote survival and exploration in complex environments, mainly due to the limitations of finite sample sizes in each training batch. 
             <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
             such as potential-based reward shaping.  -->
-            My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
-            enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort.
+            My recent works tackle the exploitation-exploration dilemma under finite sample constraints, 
+            facilitating more practical approximations of optimal policies while enhancing the robustness of heuristic selections, 
+            all with significantly reduced design effort. 
           </div>
           <br>
           <!-- <br> -->
