--- a/index.html
+++ b/index.html
@@ -254,8 +254,19 @@
               </td>
             </tr>
           </tbody></table>
+          <table><tbody>
+            <tr>
+              <td class="pub-avatar">
+                <img src="imgs/hcis.gif" />
+              </td>
+              <td class="pub-description">
+                <papertitle>Ongoing Project</papertitle>
+                <br>
+                In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
+              </td>
+            </tr>
+          </tbody></table>
           <div style="margin-left: 20px; margin-right: 20px">
-          In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
           </div>
         </div>
         <br><br>
