--- a/index.html
+++ b/index.html
@@ -262,7 +262,7 @@
               <td class="pub-description">
                 <papertitle>Ongoing Project</papertitle>
                 <br>
-                In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
+                In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception as subgoals for decision-making.
               </td>
             </tr>
           </tbody></table>
