--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 <br><br>
                 <!-- Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively.  -->
                 I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
-                My current works now center on <b>Harnessing Heuristic and its Robustness for DRL</b> and <b>Connecting Entanglement in Perceivability and Decision-Making</b>.
+                My current works now center on <b>Harnessing Heuristic and its Robustness for model-free approaches (deep RL)</b> and <b>Connecting Entanglement in Perceivability and Decision-Making</b>.
                 <!-- <ul>
                   <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
                     In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
@@ -202,7 +202,8 @@
                 <br>
                 Submitted to Conference on Neural Information Processing Systems (NeurIPS) 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
                 <br>
-                  <a href="https://changlee0903.github.io/pubs/HEPO.pdf" target="_blank">Paper (submitting)</a>
+                  <a href="https://changlee0903.github.io/pubs/HEPO.pdf" target="_blank">Paper</a> |
+                  <a href="https://anonymous.4open.science/r/IsaacGymEnvs-dev-3DF6" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
