--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
                 <br>
                 <I><u><b>Chi-Chang Lee*</b></u>, Zhang-Wei Hong*, Pulkit Agrawal</I>             
                 <br>
-                Submitted to Conference on Neural Information Processing Systems (NeurIPS) 2024, currently scored as ‘Weak Accept’, ‘Accept’, and ‘Accept’
+                Conference on Neural Information Processing Systems (NeurIPS) 2024
                 <br>
                   <a href="https://changlee0903.github.io/pubs/HEPO.pdf" target="_blank">Paper</a> |
                   <a href="https://anonymous.4open.science/r/IsaacGymEnvs-dev-3DF6" target="_blank">Code</a>
