--- a/index.html
+++ b/index.html
@@ -264,7 +264,8 @@
                 <papertitle>Ongoing Project</papertitle>
                 <br>
                 Subgoals are effective signals in decision-making and provide a common foundation for both modular pipeline schemes and end-to-end approaches, serving as planning filters and strong conditional inputs, respectively.
-                Currently, I am working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how sensor features (partial observations) can be mapped to corresponding subgoals. Errors in subgoal prediction reflect the perceivability of available observations in relation to decision-making. Moreover, perceivability can be leveraged to weigh action likelihoods during policy learning, thereby reducing the precision demands on perception when using subgoals for decision-making.
+                Currently, I am working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how sensor features (partial observations) can be mapped to corresponding subgoals. Errors in subgoal prediction reflect the perceivability of available observations in relation to decision-making. 
+                <!-- Moreover, perceivability can be leveraged to weigh action likelihoods during policy learning, thereby reducing the precision demands on perception when using subgoals for decision-making. -->
 <!-- 
                 Subgoal is always a effective signal in decision-making, also a common ground of both modular pipeline scheme and end-to-end scheme by serving planning filters and strong conditional inputs respectively.
                 In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how we map sensor features (partial observation) to corresponding subgoals.
