--- a/index.html
+++ b/index.html
@@ -204,8 +204,10 @@
                 <br>
                 Conference on Neural Information Processing Systems (NeurIPS) 2024
                 <br>
-                  <a href="https://changlee0903.github.io/pubs/HEPO.pdf" target="_blank">Paper</a> |
-                  <a href="https://anonymous.4open.science/r/IsaacGymEnvs-dev-3DF6" target="_blank">Code</a>
+                  <a href="https://openreview.net/pdf?id=vBGMbFgvsX" target="_blank">Paper</a> |
+                  <a href="https://openreview.net/forum?id=vBGMbFgvsX&noteId=w9vPHsxyz6" target="_blank">OpenReview</a> | 
+                  <a href="https://recorder-v3.slideslive.com/#/share?share=98021&s=e1380d36-4341-47c3-a8f4-a688ffb84817" target="_blank">Video</a> |
+                  <a href="https://github.com/Improbable-AI/hepo" target="_blank">Code</a>
               </td>
             </tr>
           </tbody></table>
