--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
                 <img src="imgs/HEPO.gif" />
               </td>
               <td class="pub-description">
-                <papertitle>Harnessing Heuristics for Deep Reinforcement Learning via Constrained Optimization</papertitle>
+                <papertitle>Going Beyond Heuristics by Imposing Policy Improvement as a Constraint</papertitle>
                 <br>
                 <I><u><b>Chi-Chang Lee*</b></u>, Zhang-Wei Hong*, Pulkit Agrawal</I>             
                 <br>
