--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
             </td>
 
             <td style="padding: 2%; width: 20%; max-width: 20%; top;">
-              <img src="assests/ccl.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/ccl.jpg');" onmouseout="img_unhover(this, 'assests/ccl.jpg');" />
+              <img src="assests/CCL.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/ccl.jpg');" onmouseout="img_unhover(this, 'assests/ccl.jpg');" />
             </td>
           </tr>
         </tbody></table>
