--- a/index.html
+++ b/index.html
@@ -80,16 +80,16 @@
                   </li> 
                 </ul> -->
 
+            </td>
+
+            <td style="padding: 2%; width: 20%; max-width: 20%; top;">
+              <img src="assests/CCL.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/CCL.jpg');" onmouseout="img_unhover(this, 'assests/CCL.jpg');" />
               <p style="text-align: center;">
                 <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
                 <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
                 <a href="files/ccl-cv.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
                 <a href="https://scholar.google.com/citations?user=r225tRsAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>&nbsp;
               </p>
-            </td>
-
-            <td style="padding: 2%; width: 20%; max-width: 20%; top;">
-              <img src="assests/CCL.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/ccl.jpg');" onmouseout="img_unhover(this, 'assests/ccl.jpg');" />
             </td>
           </tr>
         </tbody></table>
