--- a/index.html
+++ b/index.html
@@ -54,32 +54,12 @@
                 I am currently a research assistant in the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> at <a href="https://www.nycu.edu.tw/nycu/en/index">Yang Ming Chiao Tung University</a> in Taiwan, 
                 working under the supervision of Prof. <a href="https://sites.google.com/site/yitingchen0524/home">Yi-Ting Chen</a>. 
                 Since July 2023, I have also been collaborating with the <a herf="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour">Improbable AI Lab</a>, 
-                led by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a> at <a href="https://www.mit.edu/">Massachusetts Institute of Technology (MIT)</a>. 
-                I earned both my Bachelor’s and Master’s degrees in Engineering Science and Computer Science from National Taiwan University, 
+                led by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a> at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. 
+                I earned both my Bachelor’s and Master’s degrees in <a href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and <a href="https://www.csie.ntu.edu.tw//?locale=en">Computer Science</a> from National Taiwan University, 
                 where I worked closely with Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof. <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
-                Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems 
-                (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). 
-                
-                <br><br>
-                <!-- Beyond the input modality for models, I developed a keen interest in understanding how high-dimensional information from the perception stage influences downstream decision-making, and how these two modules can collaborate effectively.  -->
-                I believe that physical interaction with AI will be a pivotal area of focus in the next phase of AI development. Consequently, in 2023, I shifted my research focus to sensorimotor learning.
-                My current works now center on <b>Harnessing Heuristic and its Robustness for RL</b> and <b>Connecting Entanglement in Perceivability and Decision-Making</b>.
-                <br>
-                I am actively seeking a Ph.D. position starting in Fall 2025! I will be attending NeurIPS'24 in Vancouver in person, so please feel free to reach out!
-                <!-- <ul>
-                  <li><b>Harnessing Heuristic and its Robustness for DRL:</b> 
-                    In practice, DRL training frequently relies on heuristic rewards to promote survival and exploration in complex environments, 
-                    primarily due to the limitation of finite sample sizes for each training batch. 
-                    These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
-                    such as potential-based reward shaping. 
-                    My recent work addresses the exploitation-exploration dilemma under finite sample conditions, 
-                    enabling more feasible approximations of optimal policies while improving the robustness of heuristic selections with significantly reduced design effort. (References: <a href="https://changlee0903.github.io/pubs/HEPO.pdf">NeurIPS'24</a> and <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)
-                  <li><b>Connecting Entanglement in Perceivability and Decision-Making:</b> 
-                    An agent cannot effectively make decisions without perceiving the necessary patterns. While trajectories for policy training are collected by experts using privileged information, but only sensor features (partial observations) are available during deployment, reproducing the same decision-making outcomes becomes challenging due to insufficient patterns in these partial observations. Even if a perception model might converge to a local minimum with similar total loss levels, different error situations can indicate varying degrees of perceivability, significantly impacting decision-making. My earlier work focused on optimizing perception model training to ensure it aligns with both perception and downstream objectives. In addition, I am currently working on a project at the <a href="https://sites.google.com/site/yitingchen0524/hcis-lab">HCIS Lab</a> that investigates how perceivability can be used to weigh action likelihoods in policy learning while minimizing the precision requirements of perception for decision-making.
-                    (References: <a href="https://arxiv.org/pdf/2402.19464.pdf">ICLR'24</a>)                    
-                  </li> 
-                </ul> -->
-
+                Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems
+                (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). Consequently, in 2023, I started my research focus to sensorimotor learning, especially Reinforcement Learning (RL)(References: <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a> and <a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
+                My current works now center on <b>Optimal-invariant policy learning under local approximation (finite sample) constraints</b> and <b>Connecting entanglement in perceivability and pecision-making</b>. I am actively seeking a Ph.D. position starting in Fall 2025! Please feel free to reach out!
             </td>
 
             <td style="padding: 2%; width: 20%; max-width: 20%; top;">
@@ -182,8 +162,8 @@
         <br>
         <div style="height: 400px; overflow: auto;" id="pub-div">
           <div style="margin-left: 20px;margin-right: 20px">
-            <b>Harnessing Heuristic and its Robustness for DRL - </b> 
-            In practice, DRL training frequently relies on tedious heuristic reward designs to promote survival and exploration in complex environments, mainly due to the limitations of finite sample sizes in each training batch. 
+            <b>Optimal-invariant policy learning under local approximation (finite sample) constraints - </b> 
+            In practice, deep RL training frequently relies on tedious heuristic reward designs to promote survival and exploration in complex environments, mainly due to the limitations of finite sample sizes in each training batch. 
             <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
             such as potential-based reward shaping.  -->
             My recent works tackle the exploitation-exploration dilemma under finite sample constraints, 
@@ -231,7 +211,7 @@
             </tr>
           </tbody></table>
           <br><br>
-          <div style="margin-left: 20px; margin-right: 20px"><b>Connecting Entanglement in Perceivability and Decision-Making - </b> 
+          <div style="margin-left: 20px; margin-right: 20px"><b>Connecting entanglement in perceivability and pecision-making - </b> 
           An agent cannot effectively make decisions without perceiving the necessary patterns. 
           While trajectories for policy training are collected by experts using privileged information, 
           but only sensor features (partial observations) are available during deployment, 
