--- a/index.html
+++ b/index.html
@@ -57,17 +57,18 @@
                 led by Prof. <a href="http://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a> at <a href="https://www.csail.mit.edu">MIT CSAIL</a>. 
                 I earned both my Bachelor’s and Master’s degrees in <a href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and <a href="https://www.csie.ntu.edu.tw//?locale=en">Computer Science</a> from National Taiwan University, 
                 where I worked closely with Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof. <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a>.
+              </br>
                 Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems
                 (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). Consequently, in 2023, I started my research focus to sensorimotor learning, especially Reinforcement Learning (RL)(References: <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a> and <a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
                 My current works now center on <b>Optimal-invariant policy learning under local approximation (finite sample) constraints</b> and <b>Connecting entanglement in perceivability and pecision-making</b>. I am actively seeking a Ph.D. position starting in Fall 2025! Please feel free to reach out!
             </td>
 
-            <td style="padding: 2%; width: 20%; max-width: 20%; top;">
+            <td style="padding: 2%; width: 20%; height: 20%; max-width: 20%; top;">
               <img src="assests/CCL.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/CCL.jpg');" onmouseout="img_unhover(this, 'assests/CCL.jpg');" />
               <p style="text-align: center;">
                 <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
                 <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
-                <a href="files/ccl-cv.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
+                <a href="files/resume.pdf" target="_blank"><i class="ai ai-cv-square ai-2x"></i></a>&nbsp;
                 <a href="https://scholar.google.com/citations?user=r225tRsAAAAJ&hl" target="_blank"><i class="ai ai-google-scholar-square ai-2x"></i></a>&nbsp;
               </p>
             </td>
