--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
             </td>
 
             <td style="padding: 2%; width: 20%; height: 20%; max-width: 20%; top;">
-              <img src="assests/CCL.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/CCL.jpg');" onmouseout="img_unhover(this, 'assests/CCL.jpg');" />
+              <img src="assests/C.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/CCL.jpg');" onmouseout="img_unhover(this, 'assests/CCL.jpg');" />
               <p style="text-align: center;">
                 <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
                 <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
