--- a/index.html
+++ b/index.html
@@ -63,8 +63,8 @@
                 My current works now center on <b>Optimal-invariant policy learning under local approximation (finite sample) constraints</b> and <b>Connecting entanglement in perceivability and pecision-making</b>. I am actively seeking a Ph.D. position starting in Fall 2025! Please feel free to reach out!
             </td>
 
-            <td style="padding: 2%; width: 20%; height: 20%; max-width: 20%; top;">
-              <img src="assests/C.jpg" style="border-radius: 50%;" onmouseover="img_hover(this, 'assests/C.jpg');" onmouseout="img_unhover(this, 'assests/C.jpg');" />
+            <td style="padding: 2%; width: 20%; max-width: 20%; top;">
+              <img src="assests/C.jpg" style="border-radius: 50%; height: 300px" onmouseover="img_hover(this, 'assests/C.jpg');" onmouseout="img_unhover(this, 'assests/C.jpg'); " />
               <p style="text-align: center;">
                 <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
                 <a href="https://github.com/ChangLee0903" target="_blank"><i class="fab fa-github ai-2x"></i></a>&nbsp;
