--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
                 My current works now center on <b>Optimal-invariant policy learning under local approximation (finite sample) constraints</b> and <b>Connecting entanglement in perceivability and pecision-making</b>. I am actively seeking a Ph.D. position starting in Fall 2025! Please feel free to reach out!
             </td>
 
-            <td style="padding: 2%; width: 20%; max-width: 20%;">
+            <td style="padding: 2%; width: 20%; height: 20%; max-width: 20%;">
               <img src="assests/C.jpg" style="border-radius: 50%" onmouseover="img_hover(this, 'assests/C.jpg');" onmouseout="img_unhover(this, 'assests/C.jpg'); " />
               <p style="text-align: center;">
                 <a href="mailto:changlee@ntu.edu.tw" target="_blank"><i class="fas fa-envelope ai-2x"></i></a>&nbsp;
