--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
               </br></br>
                 <b>Research:</b> Before 2023, my research primarily focused on task-aware front-end processing for downstream audio applications, with a particular emphasis on developing robust speech-to-text systems
                 (References: <a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> and <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>). Consequently, in 2023, I started my research focus to sensorimotor learning, especially Reinforcement Learning (RL) (References: <a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a> and <a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>).
-                My current works now center on <b>Optimal-invariant policy learning under local approximation (finite sample) constraints</b> and <b>Connecting entanglement in perceivability and pecision-making</b>. I am actively seeking a Ph.D. position starting in Fall 2025! Please feel free to reach out!
+                My current works now center on <b>Optimal-invariant policy learning under local approximation (finite sample) constraints</b> and <b>Building connection in perceivability and pecision-making</b>. I am actively seeking a Ph.D. position starting in Fall 2025! Please feel free to reach out!
             </td>
 
             <td style="padding: 2%; width: 20%; max-width: 20%; top; padding-top: 80px;">
@@ -212,7 +212,7 @@
             </tr>
           </tbody></table>
           <br><br>
-          <div style="margin-left: 20px; margin-right: 20px"><b>Connecting entanglement in perceivability and pecision-making - </b> 
+          <div style="margin-left: 20px; margin-right: 20px"><b>Building connection in perceivability and pecision-making - </b> 
           An agent cannot effectively make decisions without perceiving the necessary patterns. 
           While trajectories for policy training are collected by experts using privileged information, 
           but only sensor features (partial observations) are available during deployment, 
