--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
               <p>
                 I earned both my Bachelor’s and Master’s degrees in <b><a href="https://homepage.ntu.edu.tw/~ntuesoe/en/Default.html">Engineering Science</a> and <a href="https://www.csie.ntu.edu.tw//?locale=en">Computer Science</a> from National Taiwan University</b>, where I worked closely with <b>Prof. <a href="https://scholar.google.com/citations?hl=en&user=ZO5e5I4AAAAJ">Yu Tsao</a> and Prof. <a href="https://homepage.iis.sinica.edu.tw/pages/whm/index_en.html">Hsin-Min Wang</a></b>. Before 2023, my research primarily centered on <b>machine learning for audio and speech modalities</b>, especially <b>Speech-to-Text systems</b> and task-aware front-end processing for downstream audio applications. I focused on improving <b>robustness to diverse acoustic environments (<a href="https://openreview.net/forum?id=5fvXH49wk2">ICLR'23</a> & <a href="https://arxiv.org/pdf/2311.16604">ASRU'23</a>)</b> and on <b>how such robustness can be continually learned and adapted over time (<a href="https://arxiv.org/pdf/2005.11760" target="_blank">Interspeech'20</a> and <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Interspeech'22</a>)</b>.
               </br></br>
-                In 2023, I have been honored to begin collaborating with the <b><a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL</b>, led by <b>Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a></b>, and shifted my primary research focus to <b>Embodied AI, particularly Reinforcement Learning (RL)</b>. My current work investigates how, under a <b>finite interaction budget</b>, a robotic agent can learn to <b>distinguish heuristic signals from the true task objective</b> while still <b>optimizing for the real but sparse success outcomes</b>. This collaboration has led to two papers: one on the <b>real-world deployment of locomotion policies (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)</b>, and another on <b>an advanced RL algorithm evaluated on 31 robotic tasks (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>)</b>.
+                In 2023, I have been honored to begin collaborating with the <b><a href="https://cap.csail.mit.edu/improbable-ai-lab-lab-tour" target="_blank">Improbable AI Lab</a> at MIT CSAIL</b>, led by <b>Prof. <a href="https://people.csail.mit.edu/pulkitag/">Pulkit Agrawal</a></b>, and shifted my primary research focus to <b>Embodied AI, particularly Reinforcement Learning (RL)</b>. My current work investigates how, under a <b>finite interaction budget</b>, a robotic agent can learn to <b>distinguish heuristic signals from the true task objective</b> while still <b>optimizing for the real but sparse success outcomes</b>. This collaboration has led to two papers: one on the <b>real-world deployment of locomotion policies (<a href="https://srinathm1359.github.io/data/Maximizing_Quadruped_Velocity_by_Minimizing_Energy.pdf">ICRA'24</a>)</b>, and another on <b>an advanced RL algorithm that achieves consistent gains on 31 robotic tasks (<a href="https://openreview.net/pdf?id=vBGMbFgvsX">NeurIPS'24</a>)</b>.
             </td>
 
             <td style="padding: 2%; width: 20%; max-width: 20%; top; padding-top: 80px;">
@@ -133,7 +133,7 @@
           <tr>
             <td class="all">
               <heading>
-                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Selected Publications in Sensorimotor Learning<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
+                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Selected Publications in Robot Learning<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
               </heading>
               <br>(∗ indicates equal contribution)
             </td>
@@ -142,13 +142,8 @@
         <br>
         <div style="height: 400px; overflow: auto;" id="pub-div">
           <div style="margin-left: 20px;margin-right: 20px">
-            <b>Optimal-invariant policy learning under local approximation (finite sample) constraints - </b> 
-            In practice, deep RL training frequently relies on tedious heuristic reward designs to promote survival and exploration in complex environments, mainly due to the limitations of finite sample sizes in each training batch. 
-            <!-- These finite sample conditions hinder the empirical feasibility of achieving the ideal expectations typically required by theoretical standards, 
-            such as potential-based reward shaping.  -->
-            My recent works tackle the exploitation-exploration dilemma under finite sample constraints, 
-            facilitating more practical approximations of optimal policies while enhancing the robustness of heuristic selections, 
-            all with significantly reduced design effort. 
+            <b>Optimal robot learning under finite interaction budgets - </b> 
+            In practice, RL for robotics often struggles with complex environments because it relies on brittle, hand-engineered dense rewards or assumes unrealistic sampling budgets (e.g., relying on proximal heuristics while the true target is a sparse success outcome). I developed a novel RL framework that optimizes for target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping.
           </div>
           <br>
           <!-- <br> -->
@@ -191,38 +186,6 @@
             </tr>
           </tbody></table>
           <br><br>
-          <div style="margin-left: 20px; margin-right: 20px"><b>Building connection in perceivability and decision-making - </b> 
-          An agent cannot effectively make decisions without perceiving the necessary patterns. 
-          While trajectories for policy training are collected by experts using privileged information, 
-          but only sensor features (partial observations) are available during deployment, 
-          reproducing the same decision-making outcomes becomes challenging due to insufficient patterns in these partial observations. 
-          <!-- Even if a perception model might converge to a local minimum with similar total loss levels, 
-          different error situations can indicate varying degrees of perceivability, significantly impacting decision-making.  -->
-          My earlier work focused on optimizing perception model training to ensure it aligns with both perception and downstream objectives. 
-          </div>
-          <br>
-          <!-- <br> -->
-          <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/D4AM.png" />
-              </td>
-              <td class="pub-description">
-                <papertitle>D4AM: A General Denoising Framework for Downstream Acoustic Models</papertitle>
-                <br>
-                <I><u><b>Chi-Chang Lee</b></u>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
-                <br>
-                  International Conference on Learning Representations (ICLR), 2023
-                <br>
-                  <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
-                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
-              </td>
-            </tr>
-          </tbody></table>
-          <div style="margin-left: 20px; margin-right: 20px">
-          </div>
-        </div>
-        <br><br>
         <!--publications-->
         <table><tbody>
           <tr>
