--- a/index.html
+++ b/index.html
@@ -186,7 +186,9 @@
             </tr>
           </tbody></table>
           <br><br>
+
         <!--publications-->
+
         <table><tbody>
           <tr>
             <td class="all">
@@ -197,23 +199,7 @@
           </tr>
         </tbody></table>
         <br>
-       <table><tbody>
-            <tr>
-              <td class="pub-avatar">
-                <img src="imgs/D4AM.png" />
-              </td>
-              <td class="pub-description">
-                <papertitle>D4AM: A General Denoising Framework for Downstream Acoustic Models</papertitle>
-                <br>
-                <I><u><b>Chi-Chang Lee</b></u>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
-                <br>
-                  International Conference on Learning Representations (ICLR), 2023
-                <br>
-                  <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
-                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
-              </td>
-            </tr>
-          </tbody></table>
+        <div style="height: 400px; overflow: auto;" id="apub-div">
           <table><tbody>
             <tr>
               <td class="pub-avatar">
