--- a/index.html
+++ b/index.html
@@ -231,6 +231,12 @@
         </tbody></table>
         <br>
         <div style="height: 400px; overflow: auto;" id="apub-div">
+          <div style="margin-left: 20px;margin-right: 20px">
+            <b>Optimal robot learning under finite interaction budgets - </b> 
+            In practice, RL for robotics often struggles with complex environments because it relies on brittle, hand-engineered dense rewards or assumes unrealistic sampling budgets (e.g., relying on proximal heuristics while the true target is a sparse success outcome). I developed a novel RL framework that optimizes for target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping.
+          </div>
+          <br>
+          
           <table><tbody>
             <tr>
               <td class="pub-avatar">
