--- a/index.html
+++ b/index.html
@@ -188,18 +188,17 @@
           <br><br>
 
         <!--publications-->
-        <!-- <div style="margin-left: 20px; margin-right: 20px"><b>Building connection in perceivability and decision-making - </b> 
+        <div style="margin-left: 20px; margin-right: 20px"><b>Building connection in perceivability and decision-making - </b> 
           An agent cannot effectively make decisions without perceiving the necessary patterns. 
           While trajectories for policy training are collected by experts using privileged information, 
           but only sensor features (partial observations) are available during deployment, 
           reproducing the same decision-making outcomes becomes challenging due to insufficient patterns in these partial observations. 
           Even if a perception model might converge to a local minimum with similar total loss levels, 
-          different error situations can indicate varying degrees of perceivability, significantly impacting decision-making.  -->
-          <!-- My earlier work focused on optimizing perception model training to ensure it aligns with both perception and downstream objectives. 
-        </div> --> 
-          <!-- <br> -->
-          <!-- <br> -->
-          <!-- <table><tbody>
+          different error situations can indicate varying degrees of perceivability, significantly impacting decision-making.
+        </div> 
+          <br>
+          <br>
+          <table><tbody>
             <tr>
               <td class="pub-avatar">
                 <img src="imgs/D4AM.png" />
@@ -215,15 +214,23 @@
                   <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
               </td>
             </tr>
-          </tbody></table> -->
+          </tbody></table>
+        <div style="margin-left: 20px; margin-right: 20px">
+        </div>
+        </div>
+        <br><br>
         
+        <!-- <table><tbody>
+          <tr>
+            <td class="all">
+              <heading>
+                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Publications in Machine Learning for Audio Modalities<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(2)" id="apub-btn"></i>
+              </heading>
+            </td>
+          </tr>
+        </tbody></table>
+        <br>
         <div style="height: 400px; overflow: auto;" id="apub-div">
-          <div style="margin-left: 20px;margin-right: 20px">
-            <b>Optimal robot learning under finite interaction budgets - </b> 
-            In practice, RL for robotics often struggles with complex environments because it relies on brittle, hand-engineered dense rewards or assumes unrealistic sampling budgets (e.g., relying on proximal heuristics while the true target is a sparse success outcome). I developed a novel RL framework that optimizes for target success outcomes without requiring (1) infinite sampling assumptions or (2) restrictive reward shaping.
-          </div>
-          <br>
-          
           <table><tbody>
             <tr>
               <td class="pub-avatar">
@@ -296,7 +303,7 @@
               </td>
             </tr>
           </tbody></table>
-          </div>
+          </div> -->
         <br><br>
 
         <!--teaching-->
