--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
           <tr>
             <td class="all">
               <heading>
-                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Publications in Robot Learning<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
+                <i class="far fa-file-alt"></i>&nbsp;&nbsp;Publications<i class="fas fa-plus-square" style="float: right;" onclick="pressBtn(1)" id="pub-btn"></i>
               </heading>
               <br>(∗ indicates equal contribution)
             </td>
@@ -188,13 +188,10 @@
           <br><br>
 
         <!--publications-->
-        <div style="margin-left: 20px; margin-right: 20px"><b>Building connection in perceivability and decision-making - </b> 
-          An agent cannot effectively make decisions without perceiving the necessary patterns. 
-          While trajectories for policy training are collected by experts using privileged information, 
-          but only sensor features (partial observations) are available during deployment, 
-          reproducing the same decision-making outcomes becomes challenging due to insufficient patterns in these partial observations. 
-          Even if a perception model might converge to a local minimum with similar total loss levels, 
-          different error situations can indicate varying degrees of perceivability, significantly impacting decision-making.
+        <div style="margin-left: 20px; margin-right: 20px"><b>Machine Learning for Audio Modalities - </b> 
+          My previous research mainly focused on “normalizing” speech from diverse acoustic conditions for downstream tasks such as Speech-to-Text and Speaker Identification. My related publications cover two main directions:
+  (1) Leveraging multiple label modalities for auxiliary learning and data reuse, by combining synthetic and real-world audio, for example using pairs of noisy and clean speech and pairs of noisy speech and text labels to improve robustness.
+  (2) Fast adaptation and continual learning for acoustic normalization in order to mitigate out-of-domain degradation. Given the complexity of speech and acoustic environments, it is unrealistic to assume that audio models will generalize sufficiently on their own, so my work focuses on how to automatically acquire informative data and rapidly recalibrate these models.
         </div> 
           <br>
           <br>
