--- a/index.html
+++ b/index.html
@@ -212,6 +212,79 @@
               </td>
             </tr>
           </tbody></table>
+          <table><tbody>
+            <tr>
+              <td class="pub-avatar">
+                <img src="imgs/D4AM.png" />
+              </td>
+              <td class="pub-description">
+                <papertitle>D4AM: A General Denoising Framework for Downstream Acoustic Models</papertitle>
+                <br>
+                <I><u><b>Chi-Chang Lee</b></u>, Yu Tsao, Hsin-Min Wang, Chu-Song Chen</I>                     
+                <br>
+                  International Conference on Learning Representations (ICLR), 2023
+                <br>
+                  <a href="https://openreview.net/forum?id=5fvXH49wk2" target="_blank">Paper</a> |
+                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
+              </td>
+            </tr>
+          </tbody></table>
+          <br>
+          <table><tbody>
+            <tr>
+              <td class="pub-avatar">
+                <img src="imgs/lc4sv.png" />
+              </td>
+              <td class="pub-description">
+                <papertitle>LC4SV: A Denoising Framework Learning to Compensate for Unseen Speaker Verification Models</papertitle>
+                <br>
+                <I><u><b>Chi-Chang Lee</b></u>, Hong-Wei Chen, Chu-Song Chen, Hsin-Min Wang, Tsung-Te Liu, Yu Tsao</I>             
+                <br>
+                IEEE Automatic Speech Recognition and Understanding Workshop (ASRU), 2023
+                <br>
+                <a href="https://arxiv.org/pdf/2311.16604" target="_blank">Paper</a> |
+                  <a href="https://github.com/ChangLee0903/D4AM" target="_blank">Code</a>
+              </td>
+            </tr>
+          </tbody></table>
+          <br>
+          <table><tbody>
+            <tr>
+              <td class="pub-avatar">
+                <img src="imgs/nastar.png"/>
+              </td>
+              <td class="pub-description">
+                <papertitle>NASTAR: Noise Adaptive Speech Enhancement with Target-Conditional Resampling</papertitle>
+                <br>
+                <I><u><b>Chi-Chang Lee</b></u>, Cheng-Hung Hu, Yu-Chen Lin, Chu-Song Chen, Hsin-Min Wang, Yu Tsao</I>             
+                <br>
+                  INTERSPEECH, 2022
+                <br>
+                  <a href="https://arxiv.org/pdf/2206.09058" target="_blank">Paper</a> |
+                  <a href="https://changlee0903.github.io/NASTAR-demo/" target="_blank">Website</a> |
+                  <a href="https://github.com/ChangLee0903/NASTAR" target="_blank">Code</a>
+              </td>
+            </tr>
+          </tbody></table>
+          <br>
+          <table><tbody>
+            <tr>
+              <td class="pub-avatar">
+                <img src="imgs/seril.jpg" />
+              </td>
+              <td class="pub-description">
+                <papertitle>SERIL: Noise adaptive speech enhancement using regularization-based incremental learning</papertitle>
+                <br>
+                <I><u><b>Chi-Chang Lee</b></u>, Yu-Chen Lin, Hsuan-Tien Lin, Hsin-Min Wang, Yu Tsao</I>                     
+                <br>
+                INTERSPEECH, 2020
+                <br>
+                  <a href="https://arxiv.org/pdf/2005.11760" target="_blank">Paper</a> |
+                  <a href=" https://github.com/ChangLee0903/SERIL" target="_blank">Code</a>
+              </td>
+            </tr>
+          </tbody></table>
+          </div>
         <div style="margin-left: 20px; margin-right: 20px">
         </div>
         </div>
